--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "scripts": {
     "prebuild": "shx rm -rf dist",
     "build": "npm run build:ts && npm run build:static",
-    "build:ts": "esbuild src/index.ts --bundle --outfile=dist/index.js",
-    "build:static": "shx cp -r ./static/. ./dist/"
+    "build:ts": "esbuild src/index.ts --bundle --loader:.mp3=file --outfile=dist/index.js",
+    "build:static": "shx cp -r ./static/. ./dist/",
+    "startLocal": "ws --directory dist"
   },
   "dependencies": {
     "esbuild": "^0.24.0",
+    "local-web-server": "^5.4.0",
     "shx": "^0.3.4",
     "tone": "^15.0.4",
     "typescript": "^5.6.3"
